.provarCaches/00D410000011HE0EAM/objects/rstk__confgroupp__c.object
<CustomObject>
    <description>confgroupp__c</description>
    <fields>
        <fullName>rstk__confgroupp_confgroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Configuration Group for which this Product &quot;configuration&quot; applies.</inlineHelpText>
        <label>Configuration Group</label>
        <referenceTo>rstk__confgroup__c</referenceTo>
        <relationshipLabel>Product Configuration Groups</relationshipLabel>
        <relationshipName>confgroupps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confgroupp_seq__c</fullName>
        <inlineHelpText>A unique sequence for this Product for this Configuration Group.</inlineHelpText>
        <label>Selection Sequence</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confgroupp_soprod__c</fullName>
        <inlineHelpText>The Product associated with the given Configuration Group defined on this record.</inlineHelpText>
        <label>Product Master</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Product Configuration Groups</relationshipLabel>
        <relationshipName>confgroupps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>LEFT(rstk__confgroupp_soprod__r.rstk__externalid__c &amp; &apos;_&apos; &amp; rstk__confgroupp_confgroup__r.rstk__externalid__c, 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>LEFT(rstk__confgroupp_soprod__r.Name, 50) &amp; &apos;_&apos; &amp; LEFT(rstk__confgroupp_confgroup__r.rstk__confgroup_title__c, 29)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Product Configuration Groups</label>
    <listViews>
        <fullName>rstk__RS_Product_Configuration_Groups</fullName>
        <columns>NAME</columns>
        <columns>rstk__confgroupp_soprod__c</columns>
        <columns>rstk__confgroupp_confgroup__c</columns>
        <columns>rstk__confgroupp_seq__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Product Configuration Groups</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Configuration Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__ConfGroupDivMustEqualProductDiv</fullName>
        <active>true</active>
        <description>The Product Configuration Groups Division must be the same as the Product Division.</description>
        <errorConditionFormula>rstk__confgroupp_soprod__r.rstk__soprod_shipdiv__c != rstk__confgroupp_confgroup__r.rstk__confgroup_invdiv__c</errorConditionFormula>
        <errorDisplayField>rstk__confgroupp_confgroup__c</errorDisplayField>
        <errorMessage>The Product Configuration Groups Division must be the same as the Product Division.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__ConfGroupIsRequired</fullName>
        <active>true</active>
        <description>The Product Configuration Group Is a Required Field.</description>
        <errorConditionFormula>ISBLANK(rstk__confgroupp_confgroup__c)</errorConditionFormula>
        <errorDisplayField>rstk__confgroupp_confgroup__c</errorDisplayField>
        <errorMessage>The Product Configuration Group Is a Required Field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__ProductMustBeMarkedAsConfigurable</fullName>
        <active>true</active>
        <description>The assigned Product Configuration Groups Product must be marked as Configurable.</description>
        <errorConditionFormula>NOT(rstk__confgroupp_soprod__r.rstk__soprod_configurable__c)</errorConditionFormula>
        <errorDisplayField>rstk__confgroupp_soprod__c</errorDisplayField>
        <errorMessage>The assigned Product Configuration Groups Product must be marked as Configurable.</errorMessage>
    </validationRules>
</CustomObject>